# pyephem

./: .agignore  .gitattributes  .gitignore  .hgignore  .travis.yml  CHANGELOG  CMakeLists.txt  COPYING  COPYRIGHT  Copyright  INSTALL  LICENSE  MANIFEST.in  Makefile  README  README.md  README.rst  TODO  _ephem.c  appveyor.yml  build.com  ephem.c  ephem.m4  ephem.py  format_swig.m4  index.html  prototype.py  requirements.sh  requirements.txt  run.sh  run_tests  setup.py  test  test.sh  tox.ini  xephem.spec
Site/: INDI.html  binary.html  changes.html  data.html  download.html  earthsat.html  earthwx.html  faq.html  index.html  indexpane.html  intro.html  jupiter.html  mailbag.html  main.html  mars.html  moon.html  naag.html  obslog.html  plot.html  saturn.html  skyip.html  skyview.html  solsys.html  sun.html  uranus.html  wcs.html  webmenu.html  xephem.html
container/: Dockerfile  run
data/: README.txt  cities.in  diff-3.7.7  horizons_moon_magnitude.txt  jupiter.1020  jupiter.2040  mars.1020  mars.9910  saturne.1020  saturne.2040  saturne.9910  uranus.2040
doc/: Makefile  angle.rst  date.rst  dates.rst  homepage_example.py  internal.rst  newton.rst  position.rst  premanual.html  pyephem.html  quick.css  quick.rst  radec.dot  style.css  tutorial.rst
ephem/: __init__.py  cities.py  coordinates.py  nutationlib.py  planets.py  precessionlib.py  relativity.py  stars.py
examples/: halebopp.py  jovian.py  preferences.py  test.py
extensions/: _libastro.c  dtoa.c
generate/: cities.py  satxyz.py  uranus.1020
issues/: github-issue-32.ipynb  github-issue-38.ipynb  github-issue-61.ipynb  github-issue-65.ipynb
libXm/: README
libastro-3.6.1/: Copyright  Makefile  aberration.c  anomaly.c  astro.h  auxil.c  bdl.c  chap95_data.c  circum.c  constel.c  dbfmt.c  earthsat.c  formats.c  jupmoon.c  magdecl.c  marsmoon.c  misc.c  moon.c  moonnf.c  obliq.c  parallactic.c  plmoon.c  plshadow.c  reduce.c  satmoon.c  sdp4.c  sgp4.c  sphcart.c  umoon.c  vsop87.c  vsop87.h
libastro-3.6.4/: Copyright  ap_as.c  astro.h  dbfmt.c  deltat.c  earthsat.c  helio.c  jupmoon.c  marsmoon.c  misc.c  plmoon.c  umoon.c  utc_gst.c
libastro-3.7.2/: astro.h  bdl.c  bdl.h  (+13 more)
(+908 files in other folders)
